--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "react-dom": "^19.2.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
